#28192 removing the CollectionUtils dependency in favor of Map.of